ingress_demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-test
spec: 
  rules:
    - host: demo-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-internal-service
                port: 
                  number: 8080
